Motion Paths no longer update. #71356

Closed
opened 2019-11-05 11:52:54 +01:00 by Zino Guerr · 7 comments

System Information
Operating system: Windows-10-10.0.1709 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30

Blender Version
Broken: version: 2.82 (sub 1), branch: master, commit date: 2019-11-05 09:05, hash: ea7e161e18
Worked: 2.80.75

Short description of error
{F7945559 size = full}

Exact steps for others to reproduce the error

  • Create Motion paths on keyed Object or Armature, with Autokey enabled add/move a key doesn't Auto update like it used to.
  • noticed also that sometimes rotation causes to update but after a while of adding & moving keys it goes back to not updating.

[Based on the default startup or an attached .blend file (as simple as possible)]

MP.blend

**System Information** Operating system: Windows-10-10.0.1709 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30 **Blender Version** Broken: version: 2.82 (sub 1), branch: master, commit date: 2019-11-05 09:05, hash: `ea7e161e18` Worked: 2.80.75 **Short description of error** {[F7945559](https://archive.blender.org/developer/F7945559/MP.gif) size = full} **Exact steps for others to reproduce the error** * Create Motion paths on keyed Object or Armature, with Autokey enabled add/move a key doesn't Auto update like it used to. * noticed also that sometimes rotation causes to update but after a while of adding & moving keys it goes back to not updating. [Based on the default startup or an attached .blend file (as simple as possible)] [MP.blend](https://archive.blender.org/developer/F7945634/MP.blend)
Author

Added subscriber: @Znio.G

Added subscriber: @Znio.G
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

Caused by e7507c16e8

Also introduces memleak:

Error: Not freed memory blocks: 4, total unfreed memory 0.000488 M

@Sergey: I might misunderstand this, but this is supposed to work with autokeying in the example file right? checking further...

Caused by e7507c16e8 Also introduces memleak: ``` Error: Not freed memory blocks: 4, total unfreed memory 0.000488 M ``` @Sergey: I might misunderstand this, but this is supposed to work with autokeying in the example file right? checking further...
Sergey Sharybin self-assigned this 2019-11-05 14:22:27 +01:00

This issue was referenced by 8dfe2801ac

This issue was referenced by 8dfe2801ace57798f2df24a0c5b462a0b9c52443

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71356
No description provided.