Motionpath: Fix memory leak on early output

This is a part of T71356.